@@ -1,3 +1,11 @@
+2014-02-18  Jakub Jelinek  <jakub@redhat.com>
+	    Uros Bizjak  <ubizjak@gmail.com>
+
+	PR driver/60233
+	* config/i386/driver-i386.c (host_detect_local_cpu): If
+	YMM state is not saved by the OS, also clear has_f16c.  Move
+	CPUID 0x80000001 handling before YMM state saving checking.
+
 2014-02-14  Roland McGrath  <mcgrathr@google.com>
 
 	* configure.ac (HAVE_AS_IX86_UD2): New test for 'ud2' mnemonic.
